<resources>
    <string name="app_name">Prayer</string>

    <string name="content1">บทสวดมนต์</string>
    <string name="content2">ศาสนาพิธี</string>
    <string name="content3">เรื่องน่ารู้</string>
    <string name="content4">เมนู 2</string>
    <string name="content5">เมนู 3</string>
    <string name="content6">เมนู 4</string>
    <string name="content7">เมนู 5</string>
    <string name="content8">เมนู 6</string>

    <string name="aboutme">ผู้จัดทำ</string>
    <string name="name">มาสเตอร์ อึ่ง</string>
    <string name="idcard">รหัสนักศึกษา 3115050-1</string>
    <string name="year">ปีการศึกษา 2558</string>
    <string name="year1">ชั่นปีที 4</string>
    <string name="text1">สาขา เทคโนโลยี่ สาระสนเทศ </string>
    <string name="text2">คณะ วิทยาศาสตร์</string>
    <string name="univercity">มหาลัยของฉัน</string>


    <string name="menu1">บทสวดมนต์</string>
    <string name="menu2">เมนู2</string>
    <string name="menu3">เมนู3</string>
    <string name="menu4">เมนู4</string>
    <string name="menu5">เมนู5</string>
    <string name="menu6">เมนู6</string>


</resources>
