<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="appewtc.masterung.prayer.AboutMeActivity"
    android:background="@drawable/wall8">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:background="#82ffffff">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageView11"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/menu5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView11"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idcard"
            android:id="@+id/textView12"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:id="@+id/textView13"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year1"
            android:id="@+id/textView14"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/univercity"
            android:id="@+id/textView15"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h2" />
    </LinearLayout>
</RelativeLayout>
