<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appewtc.masterung.prayer.MenuActivityActivity"
    android:background="@drawable/wall8">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView5"
                    android:src="@drawable/menu1"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView6"
                    android:src="@drawable/menu2"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu1"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:background="#82ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu2"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:background="#82ffffff" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView7"
                    android:src="@drawable/menu3"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView8"
                    android:src="@drawable/menu4"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu3"
                    android:id="@+id/textView7"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:background="#82ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu4"
                    android:id="@+id/textView8"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:background="#82ffffff" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView9"
                    android:src="@drawable/menu5"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView10"
                    android:src="@drawable/menu6"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu5"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:background="#82ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu6"
                    android:id="@+id/textView10"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:background="#82ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
