<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/wall8">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/linnear"
        android:layout_height="@dimen/linnear"
        android:background="#82ffffff"
        android:layout_centerInParent="true"
        android:padding="50dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:onClick="clickMemu"
                android:id="@+id/imageView"
                android:src="@drawable/content1"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:id="@+id/imageView2"
                android:src="@drawable/content1"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/content1"
                android:id="@+id/textView"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/content2"
                android:id="@+id/textView2"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:id="@+id/imageView3"
                android:src="@drawable/content1"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:onClick="clickAboutMe"
                android:id="@+id/imageView4"
                android:src="@drawable/menu1"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/content3"
                android:id="@+id/textView3"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/aboutme"
                android:id="@+id/textView4"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
